--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -4,69 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingHorizontal="25dp"
     tools:context=".RegistrarActivity">
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="54dp"
-        android:layout_marginTop="80dp"
         android:text="Registrarse"
-        android:textColor="#000"
-        android:textSize="30sp"
+        android:textColor="@color/black"
+        android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.118" />
 
     <Button
         android:id="@+id/SignupBttn"
-        android:layout_width="99dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginBottom="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
         android:background="@drawable/btn_bg"
         android:text="Siguiente"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_email_register"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="@+id/editText_password_register"
+        app:layout_constraintStart_toStartOf="@+id/editText_password_register"
+        app:layout_constraintTop_toBottomOf="@+id/editText_password_register" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="54dp"
+        android:layout_marginTop="44dp"
         android:text="¿Ya tienes una cuenta?"
-        app:layout_constraintBaseline_toBaselineOf="@+id/bttnInicio"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/SignupBttn"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SignupBttn" />
 
     <TextView
         android:id="@+id/bttnInicio"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="49dp"
-        android:layout_marginBottom="92dp"
         android:text="Inicia Sesión "
-        android:textColor="#C61438"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView6" />
+        android:textAlignment="viewEnd"
+        android:textColor="@color/red"
+        app:layout_constraintBottom_toBottomOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView6" />
 
     <EditText
         android:id="@+id/editText_password_register"
-        android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="54dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginEnd="54dp"
-        android:layout_marginBottom="53dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNameRegister"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="@+id/editText_email_register"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/editText_email_register"
+        app:layout_constraintTop_toBottomOf="@+id/editText_email_register"
         app:passwordToggleEnabled="true" />
 
     <TextView
@@ -74,63 +74,58 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Contraseña"
-        android:textColor="#C61438"
+        android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/editText_password_register"
         app:layout_constraintStart_toStartOf="@+id/editText_password_register" />
-
-    <EditText
-        android:id="@+id/editText_email_register"
-        android:layout_width="0dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="54dp"
-        android:layout_marginEnd="54dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="301dp"
-        android:text="Correo Eléctronico"
-        android:textColor="#C61438"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Correo Electrónico"
+        android:textColor="@color/red"
+        app:layout_constraintBottom_toTopOf="@+id/editText_email_register"
         app:layout_constraintStart_toStartOf="@+id/editText_email_register" />
+
+    <EditText
+        android:id="@+id/editText_email_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="@+id/editTextNameRegister"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/editTextNameRegister"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNameRegister" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="218dp"
         android:text="Nombre"
-        android:textColor="#C61438"
-        app:layout_constraintStart_toStartOf="@+id/editTextNameRegister"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="@color/red"
+        app:layout_constraintBottom_toTopOf="@+id/editTextNameRegister"
+        app:layout_constraintStart_toStartOf="@+id/editTextNameRegister" />
 
     <EditText
         android:id="@+id/editTextNameRegister"
-        android:layout_width="0dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="54dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="54dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Switch
         android:id="@+id/orgSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="7dp"
-        android:text="Soy Organizacion"
-        app:layout_constraintBottom_toTopOf="@+id/SignupBttn"
-        app:layout_constraintEnd_toEndOf="@+id/editText_email_register" />
+        android:minHeight="48dp"
+        android:text="Soy Organización"
+        app:layout_constraintEnd_toEndOf="@+id/editText_password_register"
+        app:layout_constraintTop_toBottomOf="@+id/editText_password_register" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
